--- a/Anilove/index.html
+++ b/Anilove/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" href="style.css?202007011648">
+    <link rel="stylesheet" href="style.css?202007031637">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
 </head>
 
@@ -48,14 +48,15 @@
     </div>
 
     <div class="container">
+
         <div class="banner">
-            <div class="text">
-                <p>Animals Need</p>
+            <div class="content">
+                <h4>Animals Need</h4>
                 <h1>YOUR Help!</h1>
-                <h4>You can chip in with money & effort!</h4>
-            </div>
-            <div class="banner-btn btn-group2">
-                <button>DONATE NOW!</button>
+                <p>You can chip in with money & effort!</p>
+                <div class="banner-btn btn-group2">
+                    <button>DONATE NOW!</button>
+                </div>
             </div>
         </div>
 
