--- a/Naturio/index.html
+++ b/Naturio/index.html
@@ -17,6 +17,7 @@
 
 <body>
     <header>
+        <!-- top-panel-start -->
         <div class="top-panel">
             <div class="top-container-wrap container">
                 <div class="top-message">
@@ -33,7 +34,8 @@
                 </div>
             </div>
         </div>
-
+        <!-- top-panel-end -->
+        <!-- header-panel-start -->
         <div class="header-panel">
             <div class="header-container-wrap container">
                 <div class="header-logo">
@@ -51,10 +53,12 @@
                 </div>
             </div>
         </div>
+        <!-- header-panel-end -->
     </header>
 
     <div class="main-content">
-        <div class="banner padding-block-xl margin-bottom-block">
+
+        <div class="banner padding-block-240 margin-bottom-block">
             <div class="container">
                 <div class="banner-text">
                     <h1>Green Leaves<br>Up To <span>20% Off</span></h1>
@@ -66,12 +70,12 @@
             </div>
         </div>
 
-        <div class="intro container">
+        <div class="intro container margin-bottom-block-lg">
             <div class="intro-title">
                 <h2>Welcome to our healthy farm!</h2>
             </div>
 
-            <div class="intro-features margin-bottom-block-lg">
+            <div class="intro-features">
                 <div class="feature">
                     <div class="num">
                         <img src="https://picsum.photos/56/56/?random=1">
@@ -115,7 +119,7 @@
 
         </div>
 
-        <div class="products-block container">
+        <div class="products-block container margin-bottom-block">
             <div class="products-title">
                 <h3>Our Products</h3>
             </div>
@@ -136,8 +140,8 @@
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
+                            <li>type1,</li>
+                            <li>type2,</li>
                             <li>type3</li>
                         </ul>
                         <h3>product name</h3>
@@ -151,8 +155,8 @@
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
+                            <li>type1,</li>
+                            <li>type2,</li>
                             <li>type3</li>
                         </ul>
                         <h3>product name</h3>
@@ -165,8 +169,8 @@
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
+                            <li>type1,</li>
+                            <li>type2,</li>
                             <li>type3</li>
                         </ul>
                         <h3>product name</h3>
@@ -179,8 +183,8 @@
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
+                            <li>type1,</li>
+                            <li>type2,</li>
                             <li>type3</li>
                         </ul>
                         <h3>product name</h3>
@@ -193,8 +197,8 @@
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
+                            <li>type1,</li>
+                            <li>type2,</li>
                             <li>type3</li>
                         </ul>
                         <h3>product name</h3>
@@ -207,8 +211,8 @@
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
+                            <li>type1,</li>
+                            <li>type2,</li>
                             <li>type3</li>
                         </ul>
                         <h3>product name</h3>
@@ -221,8 +225,8 @@
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
+                            <li>type1,</li>
+                            <li>type2,</li>
                             <li>type3</li>
                         </ul>
                         <h3>product name</h3>
@@ -236,8 +240,8 @@
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
+                            <li>type1,</li>
+                            <li>type2,</li>
                             <li>type3</li>
                         </ul>
                         <h3>product name</h3>
@@ -247,13 +251,15 @@
             </div>
         </div>
 
-        <div class="shopNow container">
-            <div class="shopNow-text">
-                <h1>Fruits and Vegetables</h1>
-                <p>Fresh and Delicious All Year Round!</p>
-            </div>
-            <div class="shopNow-btn">
-                <button>SHOP NOW!</button>
+        <div class="shopNow-block padding-block-200">
+            <div class="container">
+                <div class="shopNow-block-text">
+                    <h1>Fruits and Vegetables</h1>
+                    <p>Fresh and Delicious All Year Round!</p>
+                </div>
+                <div class="shopNow-block-btn">
+                    <button class="btn-style">SHOP NOW!</button>
+                </div>
             </div>
         </div>
 
@@ -334,8 +340,8 @@
                 <ul>
                     <li>
                         <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
+                            <li>type1,</li>
+                            <li>type2,</li>
                             <li>type3</li>
                         </ul>
                         <h3>product name</h3>
@@ -343,8 +349,8 @@
                     </li>
                     <li>
                         <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
+                            <li>type1,</li>
+                            <li>type2,</li>
                             <li>type3</li>
                         </ul>
                         <h3>product name</h3>
@@ -352,40 +358,8 @@
                     </li>
                     <li>
                         <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
-                            <li>type3</li>
-                        </ul>
-                        <h3>product name</h3>
-                        <p class="price"><span class="del"></span>1.23$</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="cold-cereals-column">
-                <h5>Cold-cereals</h5>
-                <ul>
-                    <li>
-                        <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
-                            <li>type3</li>
-                        </ul>
-                        <h3>product name</h3>
-                        <p class="price"><span class="del"></span>1.23$</p>
-                    </li>
-                    <li>
-                        <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
-                            <li>type3</li>
-                        </ul>
-                        <h3>product name</h3>
-                        <p class="price"><span class="del"></span>1.23$</p>
-                    </li>
-                    <li>
-                        <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
+                            <li>type1,</li>
+                            <li>type2,</li>
                             <li>type3</li>
                         </ul>
                         <h3>product name</h3>
@@ -398,8 +372,8 @@
                 <ul>
                     <li>
                         <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
+                            <li>type1,</li>
+                            <li>type2,</li>
                             <li>type3</li>
                         </ul>
                         <h3>product name</h3>
@@ -407,8 +381,8 @@
                     </li>
                     <li>
                         <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
+                            <li>type1,</li>
+                            <li>type2,</li>
                             <li>type3</li>
                         </ul>
                         <h3>product name</h3>
@@ -416,8 +390,40 @@
                     </li>
                     <li>
                         <ul>
-                            <li>type1, </li>
-                            <li>type2, </li>
+                            <li>type1,</li>
+                            <li>type2,</li>
+                            <li>type3</li>
+                        </ul>
+                        <h3>product name</h3>
+                        <p class="price"><span class="del"></span>1.23$</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="cold-cereals-column">
+                <h5>Cold-cereals</h5>
+                <ul>
+                    <li>
+                        <ul>
+                            <li>type1,</li>
+                            <li>type2,</li>
+                            <li>type3</li>
+                        </ul>
+                        <h3>product name</h3>
+                        <p class="price"><span class="del"></span>1.23$</p>
+                    </li>
+                    <li>
+                        <ul>
+                            <li>type1,</li>
+                            <li>type2,</li>
+                            <li>type3</li>
+                        </ul>
+                        <h3>product name</h3>
+                        <p class="price"><span class="del"></span>1.23$</p>
+                    </li>
+                    <li>
+                        <ul>
+                            <li>type1,</li>
+                            <li>type2,</li>
                             <li>type3</li>
                         </ul>
                         <h3>product name</h3>
