--- a/Naturio/index.html
+++ b/Naturio/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <a href="#" id="toTop"><span class="lnr lnr-arrow-up"></span></a>
+
     <header>
         <!-- top-panel-start -->
         <div class="top-panel">
@@ -76,7 +78,7 @@
             <div class="intro-features margin-bottom-lg">
                 <div class="feature">
                     <div class="num">
-                        <img src="https://picsum.photos/56/56/?random=1">
+                        <img src="img/asset1.png">
                     </div>
                     <div class="text">
                         <h4>Best Quality Products</h4>
@@ -86,7 +88,7 @@
                 </div>
                 <div class="feature">
                     <div class="num">
-                        <img src="https://picsum.photos/56/56/?random=1">
+                        <img src="img/asset2.png">
                     </div>
                     <div class="text">
                         <h4>Farmer Products</h4>
@@ -96,7 +98,7 @@
                 </div>
                 <div class="feature">
                     <div class="num">
-                        <img src="https://picsum.photos/56/56/?random=1">
+                        <img src="img/asset3.png">
                     </div>
                     <div class="text">
                         <h4>Fast Delivery</h4>
@@ -108,10 +110,10 @@
 
             <div class="intro-pic-block margin-bottom-md">
                 <div class="pic">
-                    <img src="https://picsum.photos/590/360/?random=2">
+                    <img src="img/asset4.png">
                 </div>
                 <div class="pic">
-                    <img src="https://picsum.photos/590/360/?random=3">
+                    <img src="img/asset5.png">
                 </div>
             </div>
 
@@ -123,7 +125,7 @@
             </div>
             <div class="products-tabs">
                 <ul>
-                    <li class="tab-item"><a href="#!">NEW ARRIVALS</a></li>
+                    <li class="tab-item"><a href="#!" class="products-tabs-active">NEW ARRIVALS</a></li>
                     <li class="tab-item"><a href="#!">ORGANIC & NATURAL</a></li>
                     <li class="tab-item"><a href="#!">THE FARM STORY</a></li>
                     <li class="tab-item"><a href="#!">PLUM CAKE</a></li>
@@ -133,117 +135,141 @@
             <div class="products-tabs-content">
                 <div class="product">
                     <div class="product-thumbnail">
-                        <a href="#!"><img src="https://picsum.photos/245/245/?random=4"></a>
+                        <a href="#!"><img src="img/asset6.png"></a>
                         <!-- <span class="onsale">Sale!</span> -->
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1</li>
-                            <li>type2</li>
-                            <li>type3</li>
+                            <li>Organic</li>
+                            <li>Vegetable</li>
+                            <li>Fruit</li>
                         </ul>
-                        <h3>product name</h3>
-                        <p class="price"><span class="del"></span>1.23$</p>
+                        <h3>Organic Beetroot</h3>
+                        <span class="price">
+                            <del>4.99$</del>
+                            <ins>2.56$</ins>
+                        </span>
                     </div>
                 </div>
                 <div class="product">
                     <div class="product-thumbnail">
-                        <a href="#!"><img src="https://picsum.photos/245/245/?random=4"></a>
+                        <a href="#!"><img src="img/asset7.png"></a>
                         <!-- <span class="featured">Featured</span> -->
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1</li>
-                            <li>type2</li>
-                            <li>type3</li>
+                            <li>Organic</li>
+                            <li>Vegetable</li>
+                            <li>Fruit</li>
                         </ul>
-                        <h3>product name</h3>
-                        <p class="price"><span class="del"></span>1.23$</p>
+                        <h3>Organic Cauliflower</h3>
+                        <span class="price">
+                            <del></del>
+                            <ins>7.88$</ins>
+                        </span>
                     </div>
                 </div>
                 <div class="product">
                     <div class="product-thumbnail">
-                        <a href="#!"><img src="https://picsum.photos/245/245/?random=4"></a>
+                        <a href="#!"><img src="img/asset8.png"></a>
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1</li>
-                            <li>type2</li>
-                            <li>type3</li>
+                            <li>Organic</li>
+                            <li>Vegetable</li>
+                            <li>Fruit</li>
                         </ul>
-                        <h3>product name</h3>
-                        <p class="price"><span class="del"></span>1.23$</p>
+                        <h3>Organic Fennel</h3>
+                        <span class="price">
+                            <del></del>
+                            <ins>4.81$</ins>
+                        </span>
                     </div>
                 </div>
                 <div class="product">
                     <div class="product-thumbnail">
-                        <a href="#!"><img src="https://picsum.photos/245/245/?random=4"></a>
+                        <a href="#!"><img src="img/asset9.png"></a>
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1</li>
-                            <li>type2</li>
-                            <li>type3</li>
+                            <li>Organic</li>
+                            <li>Vegetable</li>
+                            <li>Fruit</li>
                         </ul>
-                        <h3>product name</h3>
-                        <p class="price"><span class="del"></span>1.23$</p>
+                        <h3>Organic Jap Pumpkin 1kg</h3>
+                        <span class="price">
+                            <del></del>
+                            <ins>9.88$</ins>
+                        </span>
                     </div>
                 </div>
                 <div class="product">
                     <div class="product-thumbnail">
-                        <a href="#!"><img src="https://picsum.photos/245/245/?random=4"></a>
+                        <a href="#!"><img src="img/asset10.png"></a>
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1</li>
-                            <li>type2</li>
-                            <li>type3</li>
+                            <li>Organic</li>
+                            <li>Vegetable</li>
+                            <li>Fruit</li>
                         </ul>
-                        <h3>product name</h3>
-                        <p class="price"><span class="del"></span>1.23$</p>
+                        <h3>Organic Kiwi Fruit 500g</h3>
+                        <span class="price">
+                            <del></del>
+                            <ins>6.88$</ins>
+                        </span>
                     </div>
                 </div>
                 <div class="product">
                     <div class="product-thumbnail">
-                        <a href="#!"><img src="https://picsum.photos/245/245/?random=4"></a>
+                        <a href="#!"><img src="img/asset11.png"></a>
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1</li>
-                            <li>type2</li>
-                            <li>type3</li>
+                            <li>Organic</li>
+                            <li>Vegetable</li>
+                            <li>Fruit</li>
                         </ul>
-                        <h3>product name</h3>
-                        <p class="price"><span class="del"></span>1.23$</p>
+                        <h3>Organic Muhrooms, 250g</h3>
+                        <span class="price">
+                            <del></del>
+                            <ins>3.13$</ins>
+                        </span>
                     </div>
                 </div>
                 <div class="product">
                     <div class="product-thumbnail">
-                        <a href="#!"><img src="https://picsum.photos/245/245/?random=4"></a>
+                        <a href="#!"><img src="img/asset12.png"></a>
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1</li>
-                            <li>type2</li>
-                            <li>type3</li>
+                            <li>Organic</li>
+                            <li>Vegetable</li>
+                            <li>Fruit</li>
                         </ul>
-                        <h3>product name</h3>
-                        <p class="price"><span class="del"></span>1.23$</p>
+                        <h3>Organic Parsley</h3>
+                        <span class="price">
+                            <del></del>
+                            <ins>2.25$</ins>
+                        </span>
                     </div>
                 </div>
                 <div class="product">
                     <div class="product-thumbnail">
-                        <a href="#!"><img src="https://picsum.photos/245/245/?random=4"></a>
+                        <a href="#!"><img src="img/asset13.png"></a>
                         <!-- <span class="featured">Featured</span> -->
                     </div>
                     <div class="product-info">
                         <ul>
-                            <li>type1</li>
-                            <li>type2</li>
-                            <li>type3</li>
+                            <li>Organic</li>
+                            <li>Vegetable</li>
+                            <li>Fruit</li>
                         </ul>
-                        <h3>product name</h3>
-                        <p class="price"><span class="del"></span>1.23$</p>
+                        <h3>Organic Sebago Potatoes</h3>
+                        <span class="price">
+                            <del></del>
+                            <ins>2.50$ - 7.50$</ins>
+                        </span>
                     </div>
                 </div>
             </div>
@@ -345,7 +371,7 @@
 
         <div class="cold-cereals container margin-bottom-lg">
             <div class="cold-cereals-col">
-                <h5>Cold-cereals</h5>
+                <h5>Cold-cereal</h5>
                 <ul class="product-wrap">
                     <li>
                         <a href="#!" class="img-border">
@@ -394,7 +420,7 @@
                 </ul>
             </div>
             <div class="cold-cereals-col">
-                <h5>Cold-cereals</h5>
+                <h5>Cold-cereal</h5>
                 <ul class="product-wrap">
                     <li>
                         <a href="#!" class="img-border">
@@ -443,7 +469,7 @@
                 </ul>
             </div>
             <div class="cold-cereals-col">
-                <h5>Cold-cereals</h5>
+                <h5>Cold-cereal</h5>
                 <ul class="product-wrap">
                     <li>
                         <a href="#!" class="img-border">
@@ -493,27 +519,23 @@
             </div>
         </div>
 
-        <div class="swiper-block">
+        <div class="swiper-block margin-bottom-md">
             <div class="container">
                 <h3>Our Clients Testimonials</h3>
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
 
                         <div class="swiper-slide">
-                            <div class="client-img">
-                                <img src="https://picsum.photos/78/78/?random=15">
-                            </div>
-                            <h3>66</h3>
+                            <img src="img/asset34.png">
+                            <h5>66</h5>
                             <p class="client-testimonial">I’d like to admit that the quality of clothes is really good.
                                 I ordered different items from different manufacturers, and they are all high-class!</p>
                             <h4 class="client-name">Tim Diaz</h4>
                             <p class="client-type">Customer</p>
                         </div>
                         <div class="swiper-slide">
-                            <div class="client-img">
-                                <img src="https://picsum.photos/78/78/?random=15">
-                            </div>
-                            <h3>66</h3>
+                            <img src="img/asset35.png">
+                            <h5>66</h5>
                             <p class="client-testimonial">Thank you, Naturio, for remarkable discount you provided me! I
                                 became a regular buyer because my family and relatives now adore your products. We also
                                 shipped it to our overseas friends as such products are hard to find elsewhere!</p>
@@ -521,10 +543,8 @@
                             <p class="client-type">Customer</p>
                         </div>
                         <div class="swiper-slide">
-                            <div class="client-img">
-                                <img src="https://picsum.photos/78/78/?random=15">
-                            </div>
-                            <h3>66</h3>
+                            <img src="img/asset33.png">
+                            <h5>66</h5>
                             <p class="client-testimonial">It was my first time to buy healthy food online and I can say
                                 I will order it again and again! Now I pay more attention to my health and have a lot of
                                 organic products. Thank you, guys, for your attention to details and customers!</p>
@@ -541,11 +561,12 @@
             </div>
         </div>
 
-        <div class="Subscribe container">
+        <div class="subscribe-block container margin-bottom-lg">
             <h3>Subscribe Newsletter</h3>
             <div class="subscribe-panel">
-                <div class="input"></div>
-                <div class="btn"><a href="#!">Subscribe</a></div>
+                <input class="subscribe-input" type="email" name="subscribe-mail" value=""
+                    placeholder="Enter your email">
+                <div class="btn btn-md btn-hover1"><a href="#!">SUBSCIBE</a></div>
             </div>
         </div>
 
@@ -585,34 +606,57 @@
             <div class="type">
                 <h5>Store Information</h5>
                 <ul>
-                    <li>Address: 4578 Marmora Road, Glasgow</li>
-                    <li>Phones: +3 <a href="#!">(800) 2345-6789:
+                    <li><i class="lnr lnr-map-marker"></i> Address: 4578 Marmora Road, Glasgow</li>
+                    <li><i class="lnr lnr-phone-handset"></i> Phones: +3 <a href="#!">(800) 2345-6789:<br>
                             +3(800) 2345-6790</a></li>
-                    <li>Hours: 7 Days a week from 9:00
+                    <li><i class="lnr lnr-clock"></i> Hours: 7 Days a week from 9:00<br>
                         am to 7:00 pm</li>
-                    <li>E-mail: <a href="#!">info@demolink.org</a></li>
+                    <li><i class="lnr lnr-envelope"></i> E-mail: <a href="#!">info@demolink.org</a></li>
                 </ul>
             </div>
         </div>
     </footer>
-
-
-
-
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-
     <script>
         var swiper = new Swiper('.swiper-container', {
             slidesPerView: 1,
             spaceBetween: 30,
             loop: true,
+            autoplay: true,
             navigation: {
                 nextEl: '.swiper-button-next',
                 prevEl: '.swiper-button-prev',
             },
         });
+
+        $(function () {
+            $('.swiper-container').hover(mouseIN,mouseOut);
+
+            $(window).scroll(function () {
+                if ($(this).scrollTop() > 150) {
+                    $('#toTop').css('opacity', '1');
+                } else {
+                    $('#toTop').css('opacity', '0');
+                }
+                
+            });
+
+            $('#toTop').click(function () {
+                $('html,body').animate({ scrollTop: 0 }, 500);
+            });
+        });
+
+        function mouseOut() {  
+            $('.swiper-button-next').css('right','-50px');
+            $('.swiper-button-prev').css('left','-50px');
+        }
+
+        function mouseIN() {  
+            $('.swiper-button-next').css('right','10px');
+            $('.swiper-button-prev').css('left','10px');
+        }
+
     </script>
 </body>
 
