--- a/Naturio/index.html
+++ b/Naturio/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
 
-        <div class="intro container margin-bottom-lg">
+        <div class="intro container">
             <div class="intro-title">
                 <h2>Welcome to our healthy farm!</h2>
             </div>
