--- a/Naturio/index.html
+++ b/Naturio/index.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -135,141 +137,211 @@
             <div class="products-tabs-content">
                 <div class="product">
                     <div class="product-thumbnail">
-                        <a href="#!"><img src="img/asset6.png"></a>
-                        <!-- <span class="onsale">Sale!</span> -->
+                        <a href="#!">
+                            <img src="img/asset6.png">
+                            <span class="tag tag-onsale">SALE!</span>
+                        </a>
                     </div>
-                    <div class="product-info">
-                        <ul>
-                            <li>Organic</li>
-                            <li>Vegetable</li>
-                            <li>Fruit</li>
-                        </ul>
-                        <h3>Organic Beetroot</h3>
-                        <span class="price">
-                            <del>4.99$</del>
-                            <ins>2.56$</ins>
-                        </span>
+                    <div class="product-content">
+                        <div class="product-info">
+                            <ul>
+                                <li>Organic</li>
+                                <li>Vegetable</li>
+                                <li>Fruit</li>
+                            </ul>
+                            <h3>Organic Beetroot</h3>
+                            <span class="price">
+                                <del>4.99$</del>
+                                <ins>2.56$</ins>
+                            </span>
+                        </div>
+                        <div class="product_button_block">
+                            <div class="view icon-block"><span class="lnr lnr-eye"></span></div>
+                            <div class="wish icon-block"><span class="lnr lnr-heart"></span></div>
+                            <div class="compare icon-block"><span class="fa fa-balance-scale"></span></div>
+                            <div class="addCart btn btn-md btn-hover1"><a href="#!">ADD TO CART</a></div>
+                        </div>
                     </div>
                 </div>
                 <div class="product">
                     <div class="product-thumbnail">
-                        <a href="#!"><img src="img/asset7.png"></a>
-                        <!-- <span class="featured">Featured</span> -->
+                        <a href="#!">
+                            <img src="img/asset7.png">
+                            <span class="tag tag-featured">Featured</span>
+                        </a>
                     </div>
-                    <div class="product-info">
-                        <ul>
-                            <li>Organic</li>
-                            <li>Vegetable</li>
-                            <li>Fruit</li>
-                        </ul>
-                        <h3>Organic Cauliflower</h3>
-                        <span class="price">
-                            <del></del>
-                            <ins>7.88$</ins>
-                        </span>
+                    <div class="product-content">
+                        <div class="product-info">
+                            <ul>
+                                <li>Organic</li>
+                                <li>Vegetable</li>
+                                <li>Fruit</li>
+                            </ul>
+                            <h3>Organic Cauliflower</h3>
+                            <span class="price">
+                                <del></del>
+                                <ins>7.88$</ins>
+                            </span>
+                        </div>
+                        <div class="product_button_block">
+                            <div class="view icon-block"><span class="lnr lnr-eye"></span></div>
+                            <div class="wish icon-block"><span class="lnr lnr-heart"></span></div>
+                            <div class="compare icon-block"><span class="fa fa-balance-scale"></span></div>
+                            <div class="addCart btn btn-md btn-hover1"><a href="#!">ADD TO CART</a></div>
+                        </div>
                     </div>
                 </div>
                 <div class="product">
                     <div class="product-thumbnail">
                         <a href="#!"><img src="img/asset8.png"></a>
                     </div>
-                    <div class="product-info">
-                        <ul>
-                            <li>Organic</li>
-                            <li>Vegetable</li>
-                            <li>Fruit</li>
-                        </ul>
-                        <h3>Organic Fennel</h3>
-                        <span class="price">
-                            <del></del>
-                            <ins>4.81$</ins>
-                        </span>
+                    <div class="product-content">
+                        <div class="product-info">
+                            <ul>
+                                <li>Organic</li>
+                                <li>Vegetable</li>
+                                <li>Fruit</li>
+                            </ul>
+                            <h3>Organic Fennel</h3>
+                            <span class="price">
+                                <del></del>
+                                <ins>4.81$</ins>
+                            </span>
+                        </div>
+                        <div class="product_button_block">
+                            <div class="view icon-block"><span class="lnr lnr-eye"></span></div>
+                            <div class="wish icon-block"><span class="lnr lnr-heart"></span></div>
+                            <div class="compare icon-block"><span class="fa fa-balance-scale"></span></div>
+                            <div class="addCart btn btn-md btn-hover1"><a href="#!">ADD TO CART</a></div>
+                        </div>
                     </div>
                 </div>
                 <div class="product">
                     <div class="product-thumbnail">
                         <a href="#!"><img src="img/asset9.png"></a>
                     </div>
-                    <div class="product-info">
-                        <ul>
-                            <li>Organic</li>
-                            <li>Vegetable</li>
-                            <li>Fruit</li>
-                        </ul>
-                        <h3>Organic Jap Pumpkin 1kg</h3>
-                        <span class="price">
-                            <del></del>
-                            <ins>9.88$</ins>
-                        </span>
+                    <div class="product-content">
+                        <div class="product-info">
+                            <ul>
+                                <li>Organic</li>
+                                <li>Vegetable</li>
+                                <li>Fruit</li>
+                            </ul>
+                            <h3>Organic Jap Pumpkin 1kg</h3>
+                            <span class="price">
+                                <del></del>
+                                <ins>9.88$</ins>
+                            </span>
+                        </div>
+                        <div class="product_button_block">
+                            <div class="view icon-block"><span class="lnr lnr-eye"></span></div>
+                            <div class="wish icon-block"><span class="lnr lnr-heart"></span></div>
+                            <div class="compare icon-block"><span class="fa fa-balance-scale"></span></div>
+                            <div class="addCart btn btn-md btn-hover1"><a href="#!">ADD TO CART</a></div>
+                        </div>
                     </div>
                 </div>
                 <div class="product">
                     <div class="product-thumbnail">
                         <a href="#!"><img src="img/asset10.png"></a>
                     </div>
-                    <div class="product-info">
-                        <ul>
-                            <li>Organic</li>
-                            <li>Vegetable</li>
-                            <li>Fruit</li>
-                        </ul>
-                        <h3>Organic Kiwi Fruit 500g</h3>
-                        <span class="price">
-                            <del></del>
-                            <ins>6.88$</ins>
-                        </span>
+                    <div class="product-content">
+                        <div class="product-info">
+                            <ul>
+                                <li>Organic</li>
+                                <li>Vegetable</li>
+                                <li>Fruit</li>
+                            </ul>
+                            <h3>Organic Kiwi Fruit 500g</h3>
+                            <span class="price">
+                                <del></del>
+                                <ins>6.88$</ins>
+                            </span>
+                        </div>
+                        <div class="product_button_block">
+                            <div class="view icon-block"><span class="lnr lnr-eye"></span></div>
+                            <div class="wish icon-block"><span class="lnr lnr-heart"></span></div>
+                            <div class="compare icon-block"><span class="fa fa-balance-scale"></span></div>
+                            <div class="addCart btn btn-md btn-hover1"><a href="#!">ADD TO CART</a></div>
+                        </div>
                     </div>
                 </div>
                 <div class="product">
                     <div class="product-thumbnail">
                         <a href="#!"><img src="img/asset11.png"></a>
                     </div>
-                    <div class="product-info">
-                        <ul>
-                            <li>Organic</li>
-                            <li>Vegetable</li>
-                            <li>Fruit</li>
-                        </ul>
-                        <h3>Organic Muhrooms, 250g</h3>
-                        <span class="price">
-                            <del></del>
-                            <ins>3.13$</ins>
-                        </span>
+                    <div class="product-content">
+                        <div class="product-info">
+                            <ul>
+                                <li>Organic</li>
+                                <li>Vegetable</li>
+                                <li>Fruit</li>
+                            </ul>
+                            <h3>Organic Muhrooms, 250g</h3>
+                            <span class="price">
+                                <del></del>
+                                <ins>3.13$</ins>
+                            </span>
+                        </div>
+                        <div class="product_button_block">
+                            <div class="view icon-block"><span class="lnr lnr-eye"></span></div>
+                            <div class="wish icon-block"><span class="lnr lnr-heart"></span></div>
+                            <div class="compare icon-block"><span class="fa fa-balance-scale"></span></div>
+                            <div class="addCart btn btn-md btn-hover1"><a href="#!">ADD TO CART</a></div>
+                        </div>
                     </div>
                 </div>
                 <div class="product">
                     <div class="product-thumbnail">
                         <a href="#!"><img src="img/asset12.png"></a>
                     </div>
-                    <div class="product-info">
-                        <ul>
-                            <li>Organic</li>
-                            <li>Vegetable</li>
-                            <li>Fruit</li>
-                        </ul>
-                        <h3>Organic Parsley</h3>
-                        <span class="price">
-                            <del></del>
-                            <ins>2.25$</ins>
-                        </span>
+                    <div class="product-content">
+                        <div class="product-info">
+                            <ul>
+                                <li>Organic</li>
+                                <li>Vegetable</li>
+                                <li>Fruit</li>
+                            </ul>
+                            <h3>Organic Parsley</h3>
+                            <span class="price">
+                                <del></del>
+                                <ins>2.25$</ins>
+                            </span>
+                        </div>
+                        <div class="product_button_block">
+                            <div class="view icon-block"><span class="lnr lnr-eye"></span></div>
+                            <div class="wish icon-block"><span class="lnr lnr-heart"></span></div>
+                            <div class="compare icon-block"><span class="fa fa-balance-scale"></span></div>
+                            <div class="addCart btn btn-md btn-hover1"><a href="#!">ADD TO CART</a></div>
+                        </div>
                     </div>
                 </div>
                 <div class="product">
                     <div class="product-thumbnail">
-                        <a href="#!"><img src="img/asset13.png"></a>
-                        <!-- <span class="featured">Featured</span> -->
+                        <a href="#!">
+                            <img src="img/asset13.png">
+                            <span class="tag tag-featured">Featured</span>
+                        </a>
                     </div>
-                    <div class="product-info">
-                        <ul>
-                            <li>Organic</li>
-                            <li>Vegetable</li>
-                            <li>Fruit</li>
-                        </ul>
-                        <h3>Organic Sebago Potatoes</h3>
-                        <span class="price">
-                            <del></del>
-                            <ins>2.50$ - 7.50$</ins>
-                        </span>
+                    <div class="product-content">
+                        <div class="product-info">
+                            <ul>
+                                <li>Organic</li>
+                                <li>Vegetable</li>
+                                <li>Fruit</li>
+                            </ul>
+                            <h3>Organic Sebago Potatoes</h3>
+                            <span class="price">
+                                <del></del>
+                                <ins>2.50$ - 7.50$</ins>
+                            </span>
+                        </div>
+                        <div class="product_button_block">
+                            <div class="view icon-block"><span class="lnr lnr-eye"></span></div>
+                            <div class="wish icon-block"><span class="lnr lnr-heart"></span></div>
+                            <div class="compare icon-block"><span class="fa fa-balance-scale"></span></div>
+                            <div class="addCart btn btn-md btn-hover1"><a href="#!">ADD TO CART</a></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -573,7 +645,7 @@
     </div>
 
     <footer>
-        <div class="container">
+        <div class="container margin-bottom-md">
             <div class="type">
                 <h5>Categories</h5>
                 <ul>
@@ -603,21 +675,22 @@
                     <li><a href="#!">Wishlist</a></li>
                 </ul>
             </div>
-            <div class="type">
+            <div class="type store-info">
                 <h5>Store Information</h5>
                 <ul>
-                    <li><i class="lnr lnr-map-marker"></i> Address: 4578 Marmora Road, Glasgow</li>
-                    <li><i class="lnr lnr-phone-handset"></i> Phones: +3 <a href="#!">(800) 2345-6789:<br>
-                            +3(800) 2345-6790</a></li>
-                    <li><i class="lnr lnr-clock"></i> Hours: 7 Days a week from 9:00<br>
+                    <li><i class="lnr lnr-map-marker">&emsp;</i>Address: 4578 Marmora Road, Glasgow</li>
+                    <li><i class="lnr lnr-phone-handset">&emsp;</i>Phones: +3 <a href="#!">(800) 2345-6789:</a><br>
+                            <a href="#!">+3(800) 2345-6790</a></li>
+                    <li><i class="lnr lnr-clock">&emsp;</i>Hours: 7 Days a week from 9:00<br>
                         am to 7:00 pm</li>
-                    <li><i class="lnr lnr-envelope"></i> E-mail: <a href="#!">info@demolink.org</a></li>
+                    <li><i class="lnr lnr-envelope">&emsp;</i>E-mail: <a href="#!">info@demolink.org</a></li>
                 </ul>
             </div>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+    <script src="script.js"></script>
     <script>
         var swiper = new Swiper('.swiper-container', {
             slidesPerView: 1,
@@ -629,34 +702,6 @@
                 prevEl: '.swiper-button-prev',
             },
         });
-
-        $(function () {
-            $('.swiper-container').hover(mouseIN,mouseOut);
-
-            $(window).scroll(function () {
-                if ($(this).scrollTop() > 150) {
-                    $('#toTop').css('opacity', '1');
-                } else {
-                    $('#toTop').css('opacity', '0');
-                }
-                
-            });
-
-            $('#toTop').click(function () {
-                $('html,body').animate({ scrollTop: 0 }, 500);
-            });
-        });
-
-        function mouseOut() {  
-            $('.swiper-button-next').css('right','-50px');
-            $('.swiper-button-prev').css('left','-50px');
-        }
-
-        function mouseIN() {  
-            $('.swiper-button-next').css('right','10px');
-            $('.swiper-button-prev').css('left','10px');
-        }
-
     </script>
 </body>
 
