add loading img
add loading img

--- a/Naturio/index.html
+++ b/Naturio/index.html
@@ -19,6 +19,12 @@
 </head>
 
 <body>
+    <div id='loading'>
+        <div class="loading-icon">
+            <img src="img/loading2.svg" alt="">
+        </div>
+    </div>
+
     <a href="#" id="toTop"><span class="lnr lnr-arrow-up"></span></a>
 
     <!-- popup-panel-start -->
